--- a/app/views/videos/edit.html.erb
+++ b/app/views/videos/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>New Video</h1>
+<h1>Editing Video</h1>
 
 <%= render 'form' %>
 
+<%= link_to 'Show', @video %> |
 <%= link_to 'Back', videos_path %>
