--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,9 +1,11 @@
+<p id="notice"><%= notice %></p>
+
 <h1>Listing videos</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Video file</th>
+      <th>Video File</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,8 +14,8 @@
     <% @videos.each do |video| %>
       <tr>
         <td>
-          <%= video_tag [video.movie.url(:mp4), type: "video/mp4"],[video.movie.url(:webm), type: "video/webm"], :size => "320x240", :controls => true %>
-        </td>
+         <%= video_tag [video.movie.url(:mp4), type: "video/mp4"],[video.movie.url(:webm), type: "video/webm"], :size => "320x240", :controls => true %>
+       </td>
         <td><%= link_to 'Show', video %></td>
         <td><%= link_to 'Edit', edit_video_path(video) %></td>
         <td><%= link_to 'Destroy', video, method: :delete, data: { confirm: 'Are you sure?' } %></td>
