--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HackershipTest</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <title>Upload Video</title>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<!--<div class="spinner"></div>-->
 <% flash.each do |name, msg| %>
   <%= content_tag :div, msg, class: "alert alert-info" %>
 <% end %>
-<%= yield %>
+<%= render :partial => "layouts/header" -%>
+<!--============================== content =================================-->
+  <div class="bg-content"> 
+   <div id="content">
+    <div class="container">
+       <%= yield %>
+    </div>
+  </div>
+  </div>
 
+<%= render :partial => "layouts/footer" -%>
 </body>
 </html>
