--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,29 +1,27 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <article class="span12">
+    <h3>Videos</h3>
+  </article>
+  <div class="clear"></div>
+  <p id="notice"><%= notice %></p>
+  <ul class="thumbnails thumbnails-1 list-services">
 
-<h1>Listing videos</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Video File</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @videos.each do |video| %>
-      <tr>
-        <td>
-         <%= video_tag [video.movie.url(:mp4), type: "video/mp4"],[video.movie.url(:webm), type: "video/webm"], :size => "320x240", :controls => true %>
-       </td>
-        <td><%= link_to 'Show', video %></td>
-        <td><%= link_to 'Edit', edit_video_path(video) %></td>
-        <td><%= link_to 'Destroy', video, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <li class="span4">
+      <div class="thumbnail thumbnail-1"> 
+        <%= video_tag [video.movie.url(:mp4), type: "video/mp4"],[video.movie.url(:webm), type: "video/webm"], :size => "320x240", :controls => true %>
+        <section> <a href="#" class="link-1">At vero eos et accusamus et iusto </a>
+          <p>Deleniti atque corrupti quos dolores molestias excepturi sint occaecati cupiditate nonprovident similique sunt in culpa.</p>
+        </section>
+      </div>
+      <%= link_to 'Show', video %>
+      <%= link_to 'Edit', edit_video_path(video) %>
+      <%= link_to 'Destroy', video, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </li>
     <% end %>
-  </tbody>
-</table>
 
-<br>
+  </ul>
+</div>
 
 <%= link_to 'New Video', new_video_path %>
+<br>
